--- a/jCubeOS CMD/jCubeOS CMD/jCubeOS CMD.csproj
+++ b/jCubeOS CMD/jCubeOS CMD/jCubeOS CMD.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>jCubeOS_CMD</RootNamespace>
   </PropertyGroup>
 
 </Project>
